2006-06-14  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXSubwindows.c (TkMacOSXInvalidateWindow): ensure invalid
	clip regions are recreated via TkMacOSXUpdateClipRgn() before they are
	used; correct call order of TkMacOSXInvalidateWindow() and
	TkMacOSXInvalClipRgns() throughout. [Bug 1501922]

	* macosx/tkMacOSXDraw.c (TkPutImage): implement drawing of very wide
	images in slices of less than 4096 pixels to workaround CopyBits
	limitation. [Bug 950121]

2006-06-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkMain.c:     Added Tcl_Preserve() call on the master
	interp as crash protection against any Tcl_DeleteInterp() call
	that might happen.

2006-06-05  Don Porter	<dgp@users.sourceforge.net>

	* generic/tkInt.h:      Thread safety for the data structures of 
	* generic/tkConsole.c:  the wish [console].  [Bug 1188340].

2006-06-01  Don Porter	<dgp@users.sourceforge.net>

	* generic/tkConsole.c:  Added Tcl_RegisterChannel() calls to bump
	the refcount of channels passed to Tcl_SetStdChannel().  This prevents
	early free-ing of the channels that leads to crashes.  [Bug 912571].

2006-05-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/entry.test (entry-22.1):
	* tests/listbox.test (listbox-6.15):
	* generic/tkListbox.c (ListboxInsertSubCmd, ListboxDeleteSubCmd):
	Ignore Tcl_SetVar2Ex failure of listVarName, similar to entry
	widget handling. [Bug 1424513]

2006-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXButton.c (TkMacOSXDrawControl): correct redraw
	for direct transition from disabled to active state. [Bug 706446]

2006-05-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenu.c (DeleteMenuCloneEntries): Modify entry index
	changes to work around VC6 optimization bug. [Bug 1224330]

	* generic/tkMessage.c (MessageWidgetObjCmd): Correct msgPtr
	preserve/release pairing. [Bug 1485750] (afredd)

	* generic/tkWindow.c (Initialize): Correct mutex (un)lock
	pairing. [Bug 1479587]
